--- a/backend/package.json
+++ b/backend/package.json
@@ -2,17 +2,21 @@
   "name": "aparigraha-razorpay-backend",
   "version": "1.0.0",
   "description": "Backend service for handling Razorpay payments and subscriptions for Aparigraha Foundation",
-  "main": "razorpay-webhook.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node razorpay-webhook.js",
-    "dev": "nodemon razorpay-webhook.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
+    "nodemailer": "^7.0.11",
     "razorpay": "^2.8.6"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "@types/bun": "latest"
   },
   "keywords": [
     "razorpay",
@@ -21,5 +25,9 @@
     "payments"
   ],
   "author": "Aparigraha Foundation",
-  "license": "MIT"
+  "license": "MIT",
+  "private": true,
+  "peerDependencies": {
+    "typescript": "^5"
+  }
 }
