--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,37 +1,92 @@
-name: Build and Test
+name: Deploy to Hostinger
 
 on:
   push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+    branches:
+      - production
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     
-    strategy:
-      matrix:
-        node-version: [18.x]
-    
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-    
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    
-    - name: Install dependencies
-      run: npm ci
-    
-    - name: Run linter
-      run: npm run lint
-    
-    - name: Build application
-      run: npm run build
-    
-    - name: Run tests
-      run: npm test
+      - name: Checkout code
+        uses: actions/checkout@v3
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+          cache: 'npm'
+      
+      - name: Install dependencies
+        run: npm ci
+      
+      - name: Build frontend
+        run: npm run build
+        env:
+          VITE_RAZORPAY_KEY_ID: ${{ secrets.VITE_RAZORPAY_KEY_ID }}
+          VITE_BACKEND_URL: ${{ secrets.VITE_BACKEND_URL }}
+      
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.1'
+      
+      - name: Install Composer dependencies
+        run: |
+          cd api
+          composer install --no-dev --optimize-autoloader
+      
+      - name: Create deployment package
+        run: |
+          mkdir -p deploy
+          cp -r dist/* deploy/
+          cp -r api deploy/
+          
+      - name: Create .htaccess for React routing
+        run: |
+          cat > deploy/.htaccess << 'EOF'
+          <IfModule mod_rewrite.c>
+            RewriteEngine On
+            RewriteBase /
+            
+            # Don't rewrite files or directories
+            RewriteCond %{REQUEST_FILENAME} !-f
+            RewriteCond %{REQUEST_FILENAME} !-d
+            
+            # Don't rewrite API calls
+            RewriteCond %{REQUEST_URI} !^/api/
+            
+            # Rewrite everything else to index.html
+            RewriteRule . /index.html [L]
+          </IfModule>
+          EOF
+      
+      - name: Update API config with secrets
+        run: |
+          cat > deploy/api/config.php << 'EOF'
+          <?php
+          return [
+              'RAZORPAY_KEY_ID' => '${{ secrets.RAZORPAY_KEY_ID }}',
+              'RAZORPAY_KEY_SECRET' => '${{ secrets.RAZORPAY_KEY_SECRET }}',
+              'RAZORPAY_WEBHOOK_SECRET' => '${{ secrets.RAZORPAY_WEBHOOK_SECRET }}',
+              
+              'SMTP_HOST' => '${{ secrets.SMTP_HOST }}',
+              'SMTP_PORT' => ${{ secrets.SMTP_PORT }},
+              'SMTP_USER' => '${{ secrets.SMTP_USER }}',
+              'SMTP_PASS' => '${{ secrets.SMTP_PASS }}',
+              'SMTP_FROM_NAME' => '${{ secrets.SMTP_FROM_NAME }}',
+              'SMTP_FROM_EMAIL' => '${{ secrets.SMTP_FROM_EMAIL }}',
+          ];
+          EOF
+      
+      - name: Deploy to Hostinger via FTP
+        uses: SamKirkland/FTP-Deploy-Action@4.3.3
+        with:
+          server: ${{ secrets.FTP_SERVER }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          local-dir: ./deploy/
+          server-dir: /public_html/
+          dangerous-clean-slate: false
