--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,35 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# Dependencies
+node_modules/
+vendor/
 
-node_modules
-dist
-dist-ssr
-*.local
+# Build output
+dist/
+deploy/
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# Environment variables
+# Environment variables (NEVER COMMIT!)
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.production
+api/config.php
 
-# Next.js
-.next
-.out
-.cache
+# Logs
+*.log
+npm-debug.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Temporary files
+*.tmp
+*.bak
+backend/
+
+# Lock files (keep package-lock.json, remove others)
+bun.lockb
